src/test/resources/good/provided/extensions/arrays1/array003.lat
int main() {
    string s = readString();
    string[] a = new string[readInt()];
    int i;
    while (i < a.length) {
        a[i] = readString();
        i++;
    }
    for (string x : a)
        s = s + x;
    printString(s);
    return 0;
}
